welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:14: error: reassignment to val
		else if(a = b){
                          ^