welcome.lessons.welcome.bat.bool2.MaxMod5.scala.code
def maxMod5(a:Int, b:Int):Int = {
	if(a % 5 != b % 5){
		if(a >= b){
			return a;
		}
		else{
			return b;
		}
	}
	else{
		if(a > b){
			return b;
		}
		else if(a = b){
			return 0;
		}
		else{
			return a;
		}
	}
}
